--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 */Intermediate
 */Saved
 BuildingEscape/Content/StarterContent/
+BuildingEscape/Content/Assets/
 
 ##########################
 # VS Generated Files #
