[Level Design] Changing skybox. (don't forget to add frames to the side wall and chair near desk)

--- a/BuildingEscape/Config/DefaultEngine.ini
+++ b/BuildingEscape/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/NewMap.NewMap
+EditorStartupMap=/Game/Maps/Apartment.Apartment
 GameDefaultMap=/Game/NewMap.NewMap
 GlobalDefaultGameMode="/Script/BuildingEscape.BuildingEscapeGameMode"
 
@@ -50,5 +50,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
