Changing gitattributes and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 */Intermediate
 */Saved
 BuildingEscape/Content/*
-!BuildingEscape/Content/Maps
+!BuildingEscape/Content/Maps/Apartment.umap
 
 ##########################
 # VS Generated Files #
