--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 */DerivedDataCache
 */Intermediate
 */Saved
+*/BuildingEscape/Content/Maps/Apartment.umap
 BuildingEscape/Content/*
 !BuildingEscape/Content/Maps/Apartment.umap
 
